# aetheriusmc.github.io

./: CLAUDE.md.save  README.md
Aetherius-Core/: .coverage  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  config.yaml  coverage.xml  pyproject.toml
Aetherius-Core/.claude/: settings.local.json
Aetherius-Core/.mypy_cache/3.12/: _ast.data.json  _ast.meta.json  _codecs.data.json  _codecs.meta.json  _collections_abc.data.json  _collections_abc.meta.json  _compression.data.json  _compression.meta.json  _ctypes.data.json  _ctypes.meta.json  _socket.data.json  _socket.meta.json  _thread.data.json  _thread.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  builtins.data.json  builtins.meta.json  bz2.data.json  bz2.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  contextvars.data.json  (+83 more)
Aetherius-Core/aetherius/: __init__.py  __main__.py
Aetherius-Core/components/: .component_state.json  config.yaml
Aetherius-Core/config/: config.yaml
Aetherius-Core/data/: players.db
Aetherius-Core/extensions/: system_monitor_plugin.py
Aetherius-Core/htmlcov/: class_index.html  function_index.html  index.html  status.json  z_18db899c93c8b53a___init___py.html  z_18db899c93c8b53a_loader_py.html  z_18db899c93c8b53a_state_py.html  z_3d4fb72d54117777___init___py.html  z_3d4fb72d54117777_application_py.html  z_3d4fb72d54117777_asset_manager_py.html  z_3d4fb72d54117777_command_queue_py.html  z_3d4fb72d54117777_component_manager_py.html  z_3d4fb72d54117777_component_py.html  z_3d4fb72d54117777_config_models_py.html  z_3d4fb72d54117777_config_py.html  z_3d4fb72d54117777_console_client_py.html  z_3d4fb72d54117777_console_interface_py.html  z_3d4fb72d54117777_console_manager_py.html  z_3d4fb72d54117777_event_manager_py.html  z_3d4fb72d54117777_events_base_py.html  z_3d4fb72d54117777_exceptions_py.html  z_3d4fb72d54117777_file_manager_py.html  z_3d4fb72d54117777_log_parser_py.html  z_3d4fb72d54117777_output_capture_py.html  z_3d4fb72d54117777_persistent_console_py.html  z_3d4fb72d54117777_player_data_models_py.html  z_3d4fb72d54117777_player_data_py.html  z_3d4fb72d54117777_player_data_repository_py.html  z_3d4fb72d54117777_player_manager_extensions_py.html  z_3d4fb72d54117777_server_enhanced_py.html  z_3d4fb72d54117777_server_manager_extensions_py.html  z_3d4fb72d54117777_server_py.html  z_3d4fb72d54117777_server_state_py.html  z_3e412c2d13311ba3___init___py.html  z_4898a8cafb22e34d___init___py.html  z_4898a8cafb22e34d_component_py.html  z_4898a8cafb22e34d_core_py.html  z_4898a8cafb22e34d_management_py.html  z_4898a8cafb22e34d_plugin_manager_py.html  z_4898a8cafb22e34d_plugin_py.html  (+28 more)
Aetherius-Core/plugins/: example.py
Aetherius-Core/scripts/: start.py
Aetherius-Core/server/: banned-players.json  eula.txt  server.properties  usercache.json
(+566 files in other folders)
